# VexWare

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/keystroke_injection/cmd_prompt_test/: cmd_prompt_test.ino
src/keystroke_injection/keystroke_test/: keystroke_test.ino
src/keystroke_injection/linux_injection_sequence/: linux_injection_sequence.ino
src/keystroke_injection/os_recognition_injection_sequence/: os_recognition_injection_sequence.ino
src/keystroke_injection/os_recognition_test/: os_recognition_test.ino
src/keystroke_injection/windows_injection_sequence/: windows_injection_sequence.ino
src/linux_execs/: cat_sound.sh  demo  maintest
src/linux_scripts/: linux_src.c  linux_src.h  main.c  test
src/os_recognition/: test_serial_linux.py  test_serial_windows.ps1
src/os_recognition/os_recognition_test_linux/: os_recognition_test_linux.ino
src/visuals/: cursor_test.c  incessant_window.c
test/: CMakeLists.txt  test_linux.c
